@@ -1,5 +1,6 @@
 package uk.gov.companieshouse.web.pps.service.penaltypayment.impl;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.api.client.http.HttpHeaders;
 import com.google.api.client.http.HttpResponseException;
 import org.junit.jupiter.api.BeforeEach;
@@ -21,18 +22,28 @@ import uk.gov.companieshouse.api.model.financialpenalty.FinanceHealthcheck;
 import uk.gov.companieshouse.api.model.financialpenalty.FinanceHealthcheckStatus;
 import uk.gov.companieshouse.api.model.financialpenalty.FinancialPenalties;
 import uk.gov.companieshouse.api.model.financialpenalty.FinancialPenalty;
+import uk.gov.companieshouse.api.model.financialpenalty.PayableStatus;
 import uk.gov.companieshouse.web.pps.api.ApiClientService;
 import uk.gov.companieshouse.web.pps.exception.ServiceException;
 import uk.gov.companieshouse.web.pps.service.penaltypayment.PenaltyPaymentService;
 import uk.gov.companieshouse.web.pps.util.PPSTestUtility;
-import uk.gov.companieshouse.web.pps.util.PenaltyReference;
 
+import java.io.IOException;
+import java.time.LocalDate;
 import java.util.List;
 
+import static java.time.LocalDate.now;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.when;
+import static uk.gov.companieshouse.api.model.financialpenalty.PayableStatus.CLOSED;
+import static uk.gov.companieshouse.api.model.financialpenalty.PayableStatus.OPEN;
+import static uk.gov.companieshouse.web.pps.service.penaltypayment.impl.PenaltyPaymentServiceImpl.OTHER_TYPE;
+import static uk.gov.companieshouse.web.pps.service.penaltypayment.impl.PenaltyPaymentServiceImpl.PENALTY_TYPE;
+import static uk.gov.companieshouse.web.pps.util.PenaltyReference.LATE_FILING;
+import static uk.gov.companieshouse.web.pps.util.PenaltyReference.SANCTIONS;
 
 @ExtendWith(MockitoExtension.class)
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
@@ -70,11 +81,18 @@ class PenaltyPaymentServiceImplTest {
     private static final String PENALTY_REF_TWO = "A0000001";
 
     private static final String GET_FINANCIAL_PENALTIES_LATE_FILING_URI =
-            "/company/" + COMPANY_NUMBER + "/penalties/" + PenaltyReference.LATE_FILING;
+            "/company/" + COMPANY_NUMBER + "/penalties/" + LATE_FILING;
+
+    private static final String GET_FINANCIAL_PENALTIES_SANCTIONS_URI =
+            "/company/" + COMPANY_NUMBER + "/penalties/" + SANCTIONS;
 
     private static final String GET_FINANCE_HEALTHCHECK_URI = "/penalty-payment-api/healthcheck/finance-system";
 
     private static final String MAINTENANCE_END_TIME = "2019-11-08T23:00:12Z";
+
+    private static final String LATE_FILING_OF_ACCOUNTS_REASON = "Late filing of accounts";
+    private static final String FAILURE_TO_FILE_A_CONFIRMATION_STATEMENT_REASON = "Failure to file a confirmation statement";
+    private static final String PENALTY_REASON = "Penalty";
 
     @BeforeEach
     void init() {
@@ -92,8 +110,7 @@ class PenaltyPaymentServiceImplTest {
             throws ServiceException, ApiErrorResponseException, URIValidationException {
         when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
 
-        FinancialPenalty validFinancialPenalty = PPSTestUtility.validFinancialPenalty(
-                PENALTY_REF);
+        FinancialPenalty validFinancialPenalty = PPSTestUtility.validFinancialPenalty(PENALTY_REF, now().minusYears(1).toString());
 
         when(financialPenaltyResourceHandler.get(GET_FINANCIAL_PENALTIES_LATE_FILING_URI)).thenReturn(financialPenaltiesGet);
         when(financialPenaltiesGet.execute()).thenReturn(responseWithData);
@@ -115,10 +132,11 @@ class PenaltyPaymentServiceImplTest {
             throws ServiceException, ApiErrorResponseException, URIValidationException {
         when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
 
+        LocalDate madeUpDate = now();
         FinancialPenalty validLateFilingPenalty1 = PPSTestUtility.validFinancialPenalty(
-                PENALTY_REF);
+                PENALTY_REF, madeUpDate.minusYears(2).toString());
         FinancialPenalty validLateFilingPenalty2 = PPSTestUtility.validFinancialPenalty(
-                PENALTY_REF_TWO);
+                PENALTY_REF_TWO, madeUpDate.minusYears(1).toString());
 
         when(financialPenaltyResourceHandler.get(GET_FINANCIAL_PENALTIES_LATE_FILING_URI)).thenReturn(financialPenaltiesGet);
         when(financialPenaltiesGet.execute()).thenReturn(responseWithData);
@@ -129,11 +147,110 @@ class PenaltyPaymentServiceImplTest {
         );
 
         List<FinancialPenalty> payableFinancialPenalties =
-                penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, PENALTY_REF);
+                penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, PENALTY_REF_TWO);
+        assertEquals(1, payableFinancialPenalties.size());
+        assertEquals(validLateFilingPenalty2, payableFinancialPenalties.getFirst());
 
-        assertEquals(2, payableFinancialPenalties.size());
-        assertEquals(validLateFilingPenalty1, payableFinancialPenalties.get(0));
-        assertEquals(validLateFilingPenalty2, payableFinancialPenalties.get(1));
+        payableFinancialPenalties =
+                penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, PENALTY_REF);
+        assertEquals(1, payableFinancialPenalties.size());
+        assertEquals(validLateFilingPenalty1, payableFinancialPenalties.getFirst());
+    }
+
+    @Test
+    @DisplayName("Get payable financial penalties with multiple payable late filing")
+    void getPayableFinancialPenaltiesWithMultiplePayableLateFiling() throws IOException, URIValidationException, ServiceException {
+
+        FinancialPenalties financialPenaltiesResponse = new ObjectMapper().readValue(
+                this.getClass().getClassLoader().getResource("company_12345678_penalties_LATE_FILING_response.json"),
+                FinancialPenalties.class);
+        assertNotNull(financialPenaltiesResponse.getItems());
+
+        when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
+
+        when(financialPenaltyResourceHandler.get(GET_FINANCIAL_PENALTIES_LATE_FILING_URI)).thenReturn(financialPenaltiesGet);
+        when(financialPenaltiesGet.execute()).thenReturn(responseWithData);
+
+        when(responseWithData.getData()).thenReturn(financialPenaltiesResponse);
+
+        List<FinancialPenalty> penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "A1234567");
+        assertSinglePenalty(penaltyAndCosts, 150, LATE_FILING_OF_ACCOUNTS_REASON, OPEN);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "A0000003");
+        assertSinglePenalty(penaltyAndCosts, 1210, LATE_FILING_OF_ACCOUNTS_REASON, OPEN);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "A0000004");
+        assertSinglePenalty(penaltyAndCosts, 750, LATE_FILING_OF_ACCOUNTS_REASON, OPEN);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "A0000002");
+        assertSinglePenalty(penaltyAndCosts, 0, LATE_FILING_OF_ACCOUNTS_REASON, CLOSED);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "A0000001");
+        assertEquals(2, penaltyAndCosts.size());
+        final var penalty = penaltyAndCosts.getFirst();
+        assertEquals(3000, penalty.getOutstanding());
+        assertEquals(PENALTY_TYPE, penalty.getType());
+        assertEquals(LATE_FILING_OF_ACCOUNTS_REASON, penalty.getReason());
+        assertEquals(OPEN, penalty.getPayableStatus());
+
+        var other = penaltyAndCosts.get(1);
+        assertEquals(105, other.getOutstanding());
+        assertEquals(OTHER_TYPE, other.getType());
+        assertEquals(LATE_FILING_OF_ACCOUNTS_REASON, other.getReason());
+        assertEquals(CLOSED, other.getPayableStatus());
+    }
+
+    @Test
+    @DisplayName("Get payable financial penalties with multiple payable sanctions")
+    void getPayableFinancialPenaltiesWithMultiplePayableSanctions() throws IOException, URIValidationException, ServiceException {
+
+        FinancialPenalties financialPenaltiesResponse = new ObjectMapper().readValue(
+                this.getClass().getClassLoader().getResource("company_12345678_penalties_SANCTIONS_response.json"),
+                FinancialPenalties.class);
+        assertNotNull(financialPenaltiesResponse.getItems());
+
+        when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
+
+        when(financialPenaltyResourceHandler.get(GET_FINANCIAL_PENALTIES_SANCTIONS_URI)).thenReturn(financialPenaltiesGet);
+        when(financialPenaltiesGet.execute()).thenReturn(responseWithData);
+
+        when(responseWithData.getData()).thenReturn(financialPenaltiesResponse);
+
+        List<FinancialPenalty> penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "P1234567");
+        assertSinglePenalty(penaltyAndCosts, 250, FAILURE_TO_FILE_A_CONFIRMATION_STATEMENT_REASON, OPEN);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "P0000600");
+        assertSinglePenalty(penaltyAndCosts, 600, FAILURE_TO_FILE_A_CONFIRMATION_STATEMENT_REASON, OPEN);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "P0000601");
+        assertSinglePenalty(penaltyAndCosts, 601, FAILURE_TO_FILE_A_CONFIRMATION_STATEMENT_REASON, OPEN);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "P0000602");
+        assertSinglePenalty(penaltyAndCosts, 0, FAILURE_TO_FILE_A_CONFIRMATION_STATEMENT_REASON, CLOSED);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "P0000603");
+        assertEquals(2, penaltyAndCosts.size());
+        final var penalty = penaltyAndCosts.getFirst();
+        assertEquals(603, penalty.getOutstanding());
+        assertEquals(PENALTY_TYPE, penalty.getType());
+        assertEquals(FAILURE_TO_FILE_A_CONFIRMATION_STATEMENT_REASON, penalty.getReason());
+        assertEquals(OPEN, penalty.getPayableStatus());
+
+        var other = penaltyAndCosts.get(1);
+        assertEquals(105, other.getOutstanding());
+        assertEquals(OTHER_TYPE, other.getType());
+        assertEquals(PENALTY_REASON, other.getReason());
+        assertEquals(CLOSED, other.getPayableStatus());
+    }
+
+    private static void assertSinglePenalty(List<FinancialPenalty> penaltyAndCosts,
+            Integer expectedOutstanding, String reason, PayableStatus expectedPayableStatus) {
+        assertEquals(1, penaltyAndCosts.size());
+        final var financialPenalty = penaltyAndCosts.getFirst();
+        assertEquals(expectedOutstanding, financialPenalty.getOutstanding());
+        assertEquals(PENALTY_TYPE, financialPenalty.getType());
+        assertEquals(reason, financialPenalty.getReason());
+        assertEquals(expectedPayableStatus, financialPenalty.getPayableStatus());
     }
 
     @Test
@@ -161,9 +278,9 @@ class PenaltyPaymentServiceImplTest {
             throws ServiceException, ApiErrorResponseException, URIValidationException {
         when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
 
-        String uri = "/company/" + COMPANY_NUMBER + "/penalties/" + PenaltyReference.LATE_FILING;
+        String uri = "/company/" + COMPANY_NUMBER + "/penalties/" + LATE_FILING;
         FinancialPenalty paidFinancialPenalty = PPSTestUtility.paidFinancialPenalty(
-                PENALTY_REF);
+                PENALTY_REF, now().minusYears(1).toString());
 
         when(financialPenaltyResourceHandler.get(uri)).thenReturn(financialPenaltiesGet);
         when(financialPenaltiesGet.execute()).thenReturn(responseWithData);
